--- a/main.html
+++ b/main.html
@@ -50,7 +50,7 @@
                 
                 <div class="form-group col-md-4">
                     <label for="grad-year-select">Graduation Year</label>
-                    <select class="form-control" id="grad-year-select" required>
+                    <select class="form-control form-select" id="grad-year-select" required>
                         <option value="">Choose...</option>
                         <option value="2020">2020</option>
                         <option value="2021">2021</option>
